update controller to use mongodb
