# api/main.go
@@ -3,7 +3,6 @@ package main
 import (
 	"context"
 	"log"
-	"net/http"
 	"os"
 
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -18,21 +17,7 @@ import (
 	"go.mongodb.org/mongo-driver/mongo/readpref"
 )
 
-// HealthCheck godoc
-// @Summary Show the status of server.
-// @Description get the status of server.
-// @Tags root
-// @Accept */*
-// @Produce json
-// @Success 200 {object} map[string]interface{}
-// @Router / [get]
-func HealthCheck(c *gin.Context) {
-	res := map[string]interface{}{
-		"data": "Server is up and running",
-	}
-
-	c.JSON(http.StatusOK, res)
-}
+var recipesController *controllers.RecipesController
 
 func init() {
 	ctx := context.Background()
@@ -42,10 +27,11 @@ func init() {
 	}
 	log.Println("Connected to MongoDB")
 
-	// collection := client.Database(os.Getenv("MONGO_DATABASE")).Collection("recipes")
+	collection := client.Database(os.Getenv("MONGO_DATABASE")).Collection("recipes")
+	recipesController = controllers.NewRecipesController(ctx, collection)
 }
 
-// @title Swagger Example API
+// @title Recipe API
 // @version 1.0
 // @description This is a sample server Petstore server.
 // @termsOfService http://swagger.io/terms/
@@ -62,11 +48,11 @@ func init() {
 func main() {
 	router := gin.Default()
 
-	router.POST("/recipes", controllers.NewRecipeController)
-	router.GET("/recipes", controllers.ListRecipesController)
-	router.PUT("/recipes/:id", controllers.UpdateRecipeController)
-	router.DELETE("/recipes/:id", controllers.DeleteRecipeController)
-	router.GET("/recipes/:id", controllers.GetRecipeController)
+	router.POST("/recipes", recipesController.NewRecipeController)
+	router.GET("/recipes", recipesController.ListRecipesController)
+	router.PUT("/recipes/:id", recipesController.UpdateRecipeController)
+	router.DELETE("/recipes/:id", recipesController.DeleteRecipeController)
+	router.GET("/recipes/:id", recipesController.GetRecipeController)
 
 	// url := ginSwagger.URL("http://petstore.swagger.io:8080/swagger/doc.json") // The url pointing to API definition
 	// router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
